--- a/SCCILINDROS/style.css
+++ b/SCCILINDROS/style.css
@@ -732,7 +732,7 @@ html {
     .two-columns-grid {
        
         padding: 10%;
-       margin: 1rem;
+        padding-left: 50px;
        
         
        
